--- a/Sivilab.PortalEmpleo/Components/Pages/Register.razor
+++ b/Sivilab.PortalEmpleo/Components/Pages/Register.razor
@@ -1,6 +1,30 @@
 ﻿@page "/register"
 
+<style>
+    .disp-content {
+        display: flex;
+        gap: 2rem;
+        padding: 2rem 3rem;
+        max-width: 1200px;
+        margin: 0 auto;
+        min-height: 80vh;
+    }
+
+    @@media (max-width: 812px) {
+        .disp-content {
+            flex-direction: column;
+            padding: 1rem;
+        }
+
+    }
+</style>
+
+
+<div class="disp-content">
+<Sivilab.PortalEmpleo.Components.Portal.Sidebar />
+
 <Sivilab.PortalEmpleo.Components.Portal.FormularioRegistro />
+</div>
 
 @code {
 
