--- a/Sivilab.Web/Components/Layout/NavMenu.razor
+++ b/Sivilab.Web/Components/Layout/NavMenu.razor
@@ -25,6 +25,16 @@
                 <span class="bi bi-list-nested-nav-menu" aria-hidden="true"></span> Weather
             </NavLink>
         </div>
+        <div class="nav-item px-3">
+            <NavLink class="nav-link" href="/registro">
+                <span class="oi oi-plus" aria-hidden="true"></span> Registro Usuario
+            </NavLink>
+        </div>
+        <div class="nav-item px-3">
+            <NavLink class="nav-link" href="/validar-correo">
+                <span class="oi oi-check" aria-hidden="true"></span> Validar Correo
+            </NavLink>
+        </div>
     </nav>
 </div>
 
